# KIN530

./: README.md  pyproject.toml
Assignment 1/: Freschlin-Kin530-Assignment_1.docx  KIN530_2D_DataHeaders_2025.csv  KIN530_2D_Kinematics_2025.csv  KIN530_2D_Kinematics_2025_Calculated.csv  KIN530_2D_Kinematics_2025_Formatted.csv  KIN530_Data_Alternate.csv  KIN530_Data_Alternate.xlsx  assignment1.ipynb  assingment1.py  functions.py  ~$eschlin-Kin530-Assignment_1.docx
